LayoutTests:

Reviewed by Darin.
        
        http://bugs.webkit.org/show_bug.cgi?id=11083
        REGRESSION: Typing tab key fails to insert a tab character in Google Docs editable area
        <rdar://problem/4757650>

        * editing/inserting/typing-tab-designmode-expected.txt: Added.
        * editing/inserting/typing-tab-designmode-forms-expected.checksum: Added.
        * editing/inserting/typing-tab-designmode-forms-expected.png: Added.
        * editing/inserting/typing-tab-designmode-forms-expected.txt: Added.
        * editing/inserting/typing-tab-designmode-forms.html: Added.
        * editing/inserting/typing-tab-designmode.html: Added.

WebCore:

        Reviewed by Darin.
        
        Fix http://bugs.webkit.org/show_bug.cgi?id=11083
        REGRESSION: Typing tab key fails to insert a tab character in Google Docs editable area
        <rdar://problem/4757650>
        
        Allow inserting tabs in designMode. Backtab behaves like before (matches FF).

        * page/EventHandler.cpp:
        (WebCore::EventHandler::defaultTabEventHandler):



git-svn-id: svn://svn.chromium.org/blink/trunk@20159 bbb929c8-8fbe-4397-9dbb-9b2b20218538